# dove-core

./: .gitignore  Cargo.toml  LICENSE  README.md
example/: Cargo.toml
example/src/: main.rs
src/: chunk.rs  config.rs  downloader.rs  error.rs  http.rs  lib.rs  progress.rs  storage.rs  task_manager.rs  utils.rs
